// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllReceiptsAtBlock > batch evm tx > batch approve + draw lottery 1`] = `
[
  {
    "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
    "blockNumber": "0x5c92f3",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xbeeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
    "gasUsed": "0xb546",
    "logs": [
      {
        "address": "0xa2f2b69ab4724d93250b0ad682af47581846a15b",
        "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
        "blockNumber": "0x5c92f3",
        "data": "0x00000000000000000000000000000000000000000000000bed1d0263d9f00000",
        "logIndex": "0x0",
        "topics": [
          "0x8c5be1e5ebec7d5bd14f71427d1e84f3dd0314c0f7b2291e5b200ac8c7c3b925",
          "0x000000000000000000000000beeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
          "0x000000000000000000000000fc5e479d4d226bf536cb91e427752a976e334bc9",
        ],
        "transactionHash": "0xcfb117454ed3b5982b6999ff1757394a8fba14a8aca4b1e0bba2f60cd1bf821e",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0xa2f2b69ab4724d93250b0ad682af47581846a15b",
    "transactionHash": "0xcfb117454ed3b5982b6999ff1757394a8fba14a8aca4b1e0bba2f60cd1bf821e",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
  {
    "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
    "blockNumber": "0x5c92f3",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xbeeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
    "gasUsed": "0x4772f",
    "logs": [
      {
        "address": "0xa2f2b69ab4724d93250b0ad682af47581846a15b",
        "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
        "blockNumber": "0x5c92f3",
        "data": "0x00000000000000000000000000000000000000000000000bed1d0263d9f00000",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000beeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
          "0x0000000000000000000000000000000000000000000000000000000000000000",
        ],
        "transactionHash": "0xf43da8320c01db13e9d11a17b8012139e94d196c634954bf33b699f5681546fc",
        "transactionIndex": "0x1",
      },
      {
        "address": "0x0000000000000000000100000000000000000000",
        "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
        "blockNumber": "0x5c92f3",
        "data": "0x00000000000000000000000000000000000000000000000000016cb5168e1000",
        "logIndex": "0x1",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000fc5e479d4d226bf536cb91e427752a976e334bc9",
          "0x000000000000000000000000beeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
        ],
        "transactionHash": "0xf43da8320c01db13e9d11a17b8012139e94d196c634954bf33b699f5681546fc",
        "transactionIndex": "0x1",
      },
      {
        "address": "0xfc5e479d4d226bf536cb91e427752a976e334bc9",
        "blockHash": "0x78a0c0f7435f82f7cd5d754e6af924b6f4b5d9d958a3f59b22c8f6a3bcd1db67",
        "blockNumber": "0x5c92f3",
        "data": "0x000000000000000000000000000000000000000000000000000000000000001600000000000000000000000000000000000000000000000000016cb5168e100000000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000000016000000000000000000000000000000000000000000000000000000000000002f000000000000000000000000000000000000000000000000000000000000000f0000000000000000000000000000000000000000000000000000000000000011000000000000000000000000000000000000000000000000000000000000000b0000000000000000000000000000000000000000000000000000000000000016000000000000000000000000000000000000000000000000000000000000001d000000000000000000000000000000000000000000000000000000000000001900000000000000000000000000000000000000000000000000000000000000120000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000e000000000000000000000000000000000000000000000000000000000000000f0000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000e000000000000000000000000000000000000000000000000000000000000000a00000000000000000000000000000000000000000000000000000000000000150000000000000000000000000000000000000000000000000000000000000011000000000000000000000000000000000000000000000000000000000000000c0000000000000000000000000000000000000000000000000000000000000017000000000000000000000000000000000000000000000000000000000000000d000000000000000000000000000000000000000000000000000000000000000c0000000000000000000000000000000000000000000000000000000000000014000000000000000000000000000000000000000000000000000000000000000e",
        "logIndex": "0x2",
        "topics": [
          "0xc756185947a2fdafefa6f046a0091a350b7ecfc73cbbfce4e4510980c64ae3a1",
          "0x000000000000000000000000beeb9fdf53be36b9ae4be64115c91a7b67e5e4ea",
        ],
        "transactionHash": "0xf43da8320c01db13e9d11a17b8012139e94d196c634954bf33b699f5681546fc",
        "transactionIndex": "0x1",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0xfc5e479d4d226bf536cb91e427752a976e334bc9",
    "transactionHash": "0xf43da8320c01db13e9d11a17b8012139e94d196c634954bf33b699f5681546fc",
    "transactionIndex": "0x1",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract call > aggregatedDex.swapWithExactSupply => transfer 1 erc20 1`] = `
[
  {
    "blockHash": "0xff0ac3d092c0d4e7caa0232a7577b6330a1b197ac84bcd56f2f59c2ea6277c52",
    "blockNumber": "0x2b226c",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0xb2e1b7613",
    "from": "0xc760da3c525c8511938c35613684c3f6175c01a5",
    "gasUsed": "0xc26d",
    "logs": [
      {
        "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
        "blockHash": "0xff0ac3d092c0d4e7caa0232a7577b6330a1b197ac84bcd56f2f59c2ea6277c52",
        "blockNumber": "0x2b226c",
        "data": "0x00000000000000000000000000000000000000000000000000000000189214af",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000c760da3c525c8511938c35613684c3f6175c01a5",
          "0x000000000000000000000000f7abcfa42bf7e7d43d3d53c665ded80fdafb5244",
        ],
        "transactionHash": "0x4d873e1499b72506eabf405b735d5dfd85a19068ff32ef792d466ddc014f3da5",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
    "transactionHash": "0x4d873e1499b72506eabf405b735d5dfd85a19068ff32ef792d466ddc014f3da5",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract call > evm.call + aggregatedDex.swapWithExactSupply 1`] = `
[
  {
    "blockHash": "0xbdae06c67294bca57bffd390c997d6730a837e1c11252d9bba00cac7384c1f16",
    "blockNumber": "0x25623f",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x15fde28667",
    "from": "0x9cb3b68e0c48c53b70f465bda3ba6481a9cb7720",
    "gasUsed": "0x2a9f7",
    "logs": [
      {
        "address": "0x0000000000000000000100000000000000000084",
        "blockHash": "0xbdae06c67294bca57bffd390c997d6730a837e1c11252d9bba00cac7384c1f16",
        "blockNumber": "0x25623f",
        "data": "0x0000000000000000000000000000000000000000000000000001550f7dca7000",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x00000000000000000000000030385059196602a1498f5f8ef91f3450e3a7b27a",
          "0x0000000000000000000000009cb3b68e0c48c53b70f465bda3ba6481a9cb7720",
        ],
        "transactionHash": "0x7b0361f47dc0be798cb9f7d115d74d68960e685714c515df81dd1a17e3db0cff",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x30385059196602a1498f5f8ef91f3450e3a7b27a",
        "blockHash": "0xbdae06c67294bca57bffd390c997d6730a837e1c11252d9bba00cac7384c1f16",
        "blockNumber": "0x25623f",
        "data": "0x0000000000000000000000009cb3b68e0c48c53b70f465bda3ba6481a9cb77200000000000000000000000000000000000000000000000000001550f7dca70000000000000000000000000000000000000000000000000000000000062f8bc54000000000000000000000000000000000000000000000000000000000025623f0000000000000000000000009cb3b68e0c48c53b70f465bda3ba6481a9cb7720",
        "logIndex": "0x1",
        "topics": [
          "0xcb3fe4174668d512bcb57104a92bc21df0b8fdeb1cacc3575aa50b74a3e5ad5a",
          "0xeac06b4f60edb2a940a2170eea5cef018dc569f5d98b8176f5da7ea640c9bd27",
          "0x0000000000000000000000000000000000000000000100000000000000000084",
          "0x0000000000000000000000000000000000000000000000000000000000000004",
        ],
        "transactionHash": "0x7b0361f47dc0be798cb9f7d115d74d68960e685714c515df81dd1a17e3db0cff",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x30385059196602a1498f5f8ef91f3450e3a7b27a",
    "transactionHash": "0x7b0361f47dc0be798cb9f7d115d74d68960e685714c515df81dd1a17e3db0cff",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
  {
    "blockHash": "0xbdae06c67294bca57bffd390c997d6730a837e1c11252d9bba00cac7384c1f16",
    "blockNumber": "0x25623f",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0xb460f6718",
    "from": "0xc760da3c525c8511938c35613684c3f6175c01a5",
    "gasUsed": "0xc26d",
    "logs": [
      {
        "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
        "blockHash": "0xbdae06c67294bca57bffd390c997d6730a837e1c11252d9bba00cac7384c1f16",
        "blockNumber": "0x25623f",
        "data": "0x0000000000000000000000000000000000000000000000000000000025342e5d",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000c760da3c525c8511938c35613684c3f6175c01a5",
          "0x000000000000000000000000f7abcfa42bf7e7d43d3d53c665ded80fdafb5244",
        ],
        "transactionHash": "0x9824e1111ba926db7df3091ec45344f224a3086daf5580eaf7ab3e6bf5a6dde6",
        "transactionIndex": "0x1",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
    "transactionHash": "0x9824e1111ba926db7df3091ec45344f224a3086daf5580eaf7ab3e6bf5a6dde6",
    "transactionIndex": "0x1",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract call > evm.call => tranfer 2 erc20 1`] = `
[
  {
    "blockHash": "0x865e21d3687f780b91e794c8011bd0afb95634ea774ad5e717e30bd1d163bca0",
    "blockNumber": "0x36e68c",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0xc4e4e5d2f",
    "from": "0x31ff8633242617c2e3cde28ab9d6c490c2f2144d",
    "gasUsed": "0x34854",
    "logs": [
      {
        "address": "0x0000000000000000000100000000000000000084",
        "blockHash": "0x865e21d3687f780b91e794c8011bd0afb95634ea774ad5e717e30bd1d163bca0",
        "blockNumber": "0x36e68c",
        "data": "0x00000000000000000000000000000000000000000000000000002062fd19888b",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f595f4a81b27e5cc1daca349a69c834f375224f4",
          "0x00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d",
        ],
        "transactionHash": "0x4460e34c66ed3251a00bd87f34912a5fdb255593edf2011bc2cd3c263b53dd5a",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
        "blockHash": "0x865e21d3687f780b91e794c8011bd0afb95634ea774ad5e717e30bd1d163bca0",
        "blockNumber": "0x36e68c",
        "data": "0x00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d00000000000000000000000000000000000000000000000000002062fd19888b0000000000000000000000000000000000000000000000000000000063d7d86a000000000000000000000000000000000000000000000000000000000036e68c00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d",
        "logIndex": "0x1",
        "topics": [
          "0xcb3fe4174668d512bcb57104a92bc21df0b8fdeb1cacc3575aa50b74a3e5ad5a",
          "0x467c2ef92abbdbbffa15d9e93a640acdea5c8c7e6853243d80cc64a4914e8535",
          "0x0000000000000000000000000000000000000000000100000000000000000084",
          "0x0000000000000000000000000000000000000000000000000000000000000021",
        ],
        "transactionHash": "0x4460e34c66ed3251a00bd87f34912a5fdb255593edf2011bc2cd3c263b53dd5a",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x0000000000000000000300000000000000000000",
        "blockHash": "0x865e21d3687f780b91e794c8011bd0afb95634ea774ad5e717e30bd1d163bca0",
        "blockNumber": "0x36e68c",
        "data": "0x0000000000000000000000000000000000000000000000000000000b42a80214",
        "logIndex": "0x2",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f595f4a81b27e5cc1daca349a69c834f375224f4",
          "0x00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d",
        ],
        "transactionHash": "0x4460e34c66ed3251a00bd87f34912a5fdb255593edf2011bc2cd3c263b53dd5a",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
        "blockHash": "0x865e21d3687f780b91e794c8011bd0afb95634ea774ad5e717e30bd1d163bca0",
        "blockNumber": "0x36e68c",
        "data": "0x00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d0000000000000000000000000000000000000000000000000000000b42a802140000000000000000000000000000000000000000000000000000000063d7d86a000000000000000000000000000000000000000000000000000000000036e68c00000000000000000000000031ff8633242617c2e3cde28ab9d6c490c2f2144d",
        "logIndex": "0x3",
        "topics": [
          "0xcb3fe4174668d512bcb57104a92bc21df0b8fdeb1cacc3575aa50b74a3e5ad5a",
          "0x467c2ef92abbdbbffa15d9e93a640acdea5c8c7e6853243d80cc64a4914e8535",
          "0x0000000000000000000000000000000000000000000300000000000000000000",
          "0x0000000000000000000000000000000000000000000000000000000000000021",
        ],
        "transactionHash": "0x4460e34c66ed3251a00bd87f34912a5fdb255593edf2011bc2cd3c263b53dd5a",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
    "transactionHash": "0x4460e34c66ed3251a00bd87f34912a5fdb255593edf2011bc2cd3c263b53dd5a",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract call > negative usedStorage 1`] = `
[
  {
    "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
    "blockNumber": "0x1f2e05",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0xae61d8143",
    "from": "0xb062d7d49613af6eb70b78bd699aebe223123655",
    "gasUsed": "0x349ff",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x0",
    "to": "0x30385059196602a1498f5f8ef91f3450e3a7b27a",
    "transactionHash": "0x32a045f87bb51631b18494e8d185276a11398bb559156fef8e22e3844b69e6f4",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
  {
    "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
    "blockNumber": "0x1f2e05",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x148bb9bf0d",
    "from": "0xe546224082532c8125ef9c035da1019c591ed530",
    "gasUsed": "0x3f544",
    "logs": [
      {
        "address": "0x0000000000000000000100000000000000000084",
        "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
        "blockNumber": "0x1f2e05",
        "data": "0x000000000000000000000000000000000000000000000000000000014ca43d64",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f595f4a81b27e5cc1daca349a69c834f375224f4",
          "0x000000000000000000000000e546224082532c8125ef9c035da1019c591ed530",
        ],
        "transactionHash": "0x7a10a6671847473e76d4b628bf38532b0513fc2966808220d1ed89d93099320f",
        "transactionIndex": "0x1",
      },
      {
        "address": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
        "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
        "blockNumber": "0x1f2e05",
        "data": "0x000000000000000000000000e546224082532c8125ef9c035da1019c591ed530000000000000000000000000000000000000000000000000000000014ca43d6400000000000000000000000000000000000000000000000000000000629f2f8000000000000000000000000000000000000000000000000000000000001f2e05000000000000000000000000e546224082532c8125ef9c035da1019c591ed530",
        "logIndex": "0x1",
        "topics": [
          "0xcb3fe4174668d512bcb57104a92bc21df0b8fdeb1cacc3575aa50b74a3e5ad5a",
          "0xfedf354b53ae7de132a2cc8cc69efb4148e26a115ee070b5fb4d4732c5bbee6b",
          "0x0000000000000000000000000000000000000000000100000000000000000084",
          "0x0000000000000000000000000000000000000000000000000000000000000002",
        ],
        "transactionHash": "0x7a10a6671847473e76d4b628bf38532b0513fc2966808220d1ed89d93099320f",
        "transactionIndex": "0x1",
      },
      {
        "address": "0x0000000000000000000300000000000000000000",
        "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
        "blockNumber": "0x1f2e05",
        "data": "0x00000000000000000000000000000000000000000000000000000000007e4baa",
        "logIndex": "0x2",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f595f4a81b27e5cc1daca349a69c834f375224f4",
          "0x000000000000000000000000e546224082532c8125ef9c035da1019c591ed530",
        ],
        "transactionHash": "0x7a10a6671847473e76d4b628bf38532b0513fc2966808220d1ed89d93099320f",
        "transactionIndex": "0x1",
      },
      {
        "address": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
        "blockHash": "0xa23a0303275e7aa89582a45f76411f96f2ee2631d121f9a05f333ba0267adaa7",
        "blockNumber": "0x1f2e05",
        "data": "0x000000000000000000000000e546224082532c8125ef9c035da1019c591ed53000000000000000000000000000000000000000000000000000000000007e4baa00000000000000000000000000000000000000000000000000000000629f2f8000000000000000000000000000000000000000000000000000000000001f2e05000000000000000000000000e546224082532c8125ef9c035da1019c591ed530",
        "logIndex": "0x3",
        "topics": [
          "0xcb3fe4174668d512bcb57104a92bc21df0b8fdeb1cacc3575aa50b74a3e5ad5a",
          "0xfedf354b53ae7de132a2cc8cc69efb4148e26a115ee070b5fb4d4732c5bbee6b",
          "0x0000000000000000000000000000000000000000000300000000000000000000",
          "0x0000000000000000000000000000000000000000000000000000000000000002",
        ],
        "transactionHash": "0x7a10a6671847473e76d4b628bf38532b0513fc2966808220d1ed89d93099320f",
        "transactionIndex": "0x1",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0xf595f4a81b27e5cc1daca349a69c834f375224f4",
    "transactionHash": "0x7a10a6671847473e76d4b628bf38532b0513fc2966808220d1ed89d93099320f",
    "transactionIndex": "0x1",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract creation > 2 contract creation failed 1`] = `
[
  {
    "blockHash": "0xbcc32e22fb336b4dfc3163e6a27a5e26b17a0823cc563db46e8be1d993366f5d",
    "blockNumber": "0x10d0ce",
    "contractAddress": "0x0000000000000000000000000000000000000000",
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x513d6f23",
    "from": "0x0000000000000000000000000000000000000000",
    "gasUsed": "0x1e8480",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x0",
    "to": null,
    "transactionHash": "0xf9f6a466c67207d9d6ba722206fe13394a123d555b0aa0615cc87f31a4290b84",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
  {
    "blockHash": "0xbcc32e22fb336b4dfc3163e6a27a5e26b17a0823cc563db46e8be1d993366f5d",
    "blockNumber": "0x10d0ce",
    "contractAddress": "0x0000000000000000000000000000000000000000",
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x2a1c0bcb",
    "from": "0x0000000000000000000000000000000000000000",
    "gasUsed": "0x3d0900",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x0",
    "to": null,
    "transactionHash": "0xdd7ea16af94d54ac7ad89c18c43cfecc55b28eb1d007acd1eb854de0225784f1",
    "transactionIndex": "0x1",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract creation > basic one 1`] = `
[
  {
    "blockHash": "0xe63a37351f11c4557e8d9077aae85b22165b941f86ec6138a6c80d1765af7582",
    "blockNumber": "0x35c899",
    "contractAddress": "0x83e2dd30bdd7e9a0f3f897868f7b13338fdbf92e",
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0xbcd3f83005e",
    "from": "0xffffd2ff9b840f6bd74f80df8e532b4d7886ffff",
    "gasUsed": "0x1319b",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": null,
    "transactionHash": "0x87bce245779cc99f78bdb5e19b7dbdf7600f30ad3a893c608a534fba7d3a3008",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > contract creation > with logs + legacy gas 1`] = `
[
  {
    "blockHash": "0x6b1378795aeedc85a88d40b2d48cf0e2408f783ba84f7cea068bfbb3ff3ad90a",
    "blockNumber": "0x1bd799",
    "contractAddress": "0xa321448d90d4e5b0a732867c18ea198e75cac48e",
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x2e73326680e",
    "from": "0xe2e2d9e31d7e1cc1178fe0d1c5950f6c809816a3",
    "gasUsed": "0x560dc",
    "logs": [
      {
        "address": "0xa321448d90d4e5b0a732867c18ea198e75cac48e",
        "blockHash": "0x6b1378795aeedc85a88d40b2d48cf0e2408f783ba84f7cea068bfbb3ff3ad90a",
        "blockNumber": "0x1bd799",
        "data": "0x",
        "logIndex": "0x0",
        "topics": [
          "0xbc7cd75a20ee27fd9adebab32041f755214dbc6bffa90cc0225b39da2e5c2d3b",
          "0x000000000000000000000000141fba8ad5d61bdab45a047cf60b5ad9784987fb",
        ],
        "transactionHash": "0x56a429edfc1c07d7fd4c048e6e868dbaaa632fc329e7bb7ed744a48bca5bb493",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xa321448d90d4e5b0a732867c18ea198e75cac48e",
        "blockHash": "0x6b1378795aeedc85a88d40b2d48cf0e2408f783ba84f7cea068bfbb3ff3ad90a",
        "blockNumber": "0x1bd799",
        "data": "0x",
        "logIndex": "0x1",
        "topics": [
          "0xbc7cd75a20ee27fd9adebab32041f755214dbc6bffa90cc0225b39da2e5c2d3b",
          "0x000000000000000000000000c0946f51ddd63e12c51b23f5814b43c9bc8aa700",
        ],
        "transactionHash": "0x56a429edfc1c07d7fd4c048e6e868dbaaa632fc329e7bb7ed744a48bca5bb493",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": null,
    "transactionHash": "0x56a429edfc1c07d7fd4c048e6e868dbaaa632fc329e7bb7ed744a48bca5bb493",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > erc20 XCM > basic xcm 1`] = `
[
  {
    "blockHash": "0x9cc984dd31a20e45a7559aa9beea728006c9464367afefcfb0d5b5464bccf10e",
    "blockNumber": "0x2ccd6e",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xf1e86719eb3b54a62f50e9b7a867c6b08e6e2901",
    "gasUsed": "0x10431",
    "logs": [
      {
        "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
        "blockHash": "0x9cc984dd31a20e45a7559aa9beea728006c9464367afefcfb0d5b5464bccf10e",
        "blockNumber": "0x2ccd6e",
        "data": "0x0000000000000000000000000000000000000000000000000000000000006400",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f1e86719eb3b54a62f50e9b7a867c6b08e6e2901",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
        ],
        "transactionHash": "0x237fb1c50093cddb0b7058728bdb050fa318973cfb807a545e45214b5ee2e2fd",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
        "blockHash": "0x9cc984dd31a20e45a7559aa9beea728006c9464367afefcfb0d5b5464bccf10e",
        "blockNumber": "0x2ccd6e",
        "data": "0x0000000000000000000000000000000000000000000000000000000000006062",
        "logIndex": "0x1",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000fff2c1b954a91802dc97f65af37378329041aa7b",
        ],
        "transactionHash": "0x237fb1c50093cddb0b7058728bdb050fa318973cfb807a545e45214b5ee2e2fd",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
        "blockHash": "0x9cc984dd31a20e45a7559aa9beea728006c9464367afefcfb0d5b5464bccf10e",
        "blockNumber": "0x2ccd6e",
        "data": "0x000000000000000000000000000000000000000000000000000000000000039e",
        "logIndex": "0x2",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000e341097cdb37dbbfd566439ea5a2a67301e673ef",
        ],
        "transactionHash": "0x237fb1c50093cddb0b7058728bdb050fa318973cfb807a545e45214b5ee2e2fd",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
    "transactionHash": "0x237fb1c50093cddb0b7058728bdb050fa318973cfb807a545e45214b5ee2e2fd",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > erc20 XCM > multiple xcms 1`] = `
[
  {
    "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
    "blockNumber": "0x2ba31e",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0x8f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
    "gasUsed": "0x10479",
    "logs": [
      {
        "address": "0x5a4d6acdc4e3e5ab15717f407afe957f7a242578",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x00000000000000000000000000000000000000000000001127a03e60445d0000",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x5a4d6acdc4e3e5ab15717f407afe957f7a242578",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x00000000000000000000000000000000000000000000001127a03de84ce428c0",
        "logIndex": "0x1",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x5a4d6acdc4e3e5ab15717f407afe957f7a242578",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x00000000000000000000000000000000000000000000000000000077f778d740",
        "logIndex": "0x2",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000e341097cdb37dbbfd566439ea5a2a67301e673ef",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x0000000000000000000000000000000000000000000069e10de76676d0800000",
        "logIndex": "0x3",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x0000000000000000000000000000000000000000000069e10de53f2588ee1800",
        "logIndex": "0x4",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x000000000000000000000000000000000000000000000000000227514791e800",
        "logIndex": "0x5",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000e341097cdb37dbbfd566439ea5a2a67301e673ef",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xc80084af223c8b598536178d9361dc55bfda6818",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x000000000000000000000000000000000000000000000000000000004e05c140",
        "logIndex": "0x6",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xc80084af223c8b598536178d9361dc55bfda6818",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x000000000000000000000000000000000000000000000000000000004e05c13d",
        "logIndex": "0x7",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xc80084af223c8b598536178d9361dc55bfda6818",
        "blockHash": "0x7017af4e4f13ca2454a32e51c6a317bf3c96b39c6f44f0e976ed424c1a5fb407",
        "blockNumber": "0x2ba31e",
        "data": "0x0000000000000000000000000000000000000000000000000000000000000003",
        "logIndex": "0x8",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000e341097cdb37dbbfd566439ea5a2a67301e673ef",
        ],
        "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x5a4d6acdc4e3e5ab15717f407afe957f7a242578",
    "transactionHash": "0x2e1d91d309e4fc8fc4148c857dacf20cb60f5fc0bc1337df1458bf689e95e3de",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > erc20 XCM > with some other random txs in the block 1`] = `
[
  {
    "blockHash": "0x7c6b1ea4aea16929315a5d18acc16c81f888b2693866dc0657fb4124c6e61dc5",
    "blockNumber": "0x28ba22",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0x8f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
    "gasUsed": "0x10479",
    "logs": [
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7c6b1ea4aea16929315a5d18acc16c81f888b2693866dc0657fb4124c6e61dc5",
        "blockNumber": "0x28ba22",
        "data": "0x00000000000000000000000000000000000000000000000eda838c4929080000",
        "logIndex": "0x0",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x0000000000000000000000008f6cb1db5a3117c84d3a101ee6d473eecc27ad9c",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
        ],
        "transactionHash": "0x26ac2b5275450557127d3b70ca68efbc7f841f4103ae4884a56299ce8ee96a25",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7c6b1ea4aea16929315a5d18acc16c81f888b2693866dc0657fb4124c6e61dc5",
        "blockNumber": "0x28ba22",
        "data": "0x00000000000000000000000000000000000000000000000eda8041387782a000",
        "logIndex": "0x1",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x0000000000000000000000000066023b24edd70b7def47effbf2fd7617f9c66b",
        ],
        "transactionHash": "0x26ac2b5275450557127d3b70ca68efbc7f841f4103ae4884a56299ce8ee96a25",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
        "blockHash": "0x7c6b1ea4aea16929315a5d18acc16c81f888b2693866dc0657fb4124c6e61dc5",
        "blockNumber": "0x28ba22",
        "data": "0x00000000000000000000000000000000000000000000000000034b10b1856000",
        "logIndex": "0x2",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000000000000000000000ff00000000000000000000",
          "0x000000000000000000000000e341097cdb37dbbfd566439ea5a2a67301e673ef",
        ],
        "transactionHash": "0x26ac2b5275450557127d3b70ca68efbc7f841f4103ae4884a56299ce8ee96a25",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x54a37a01cd75b616d63e0ab665bffdb0143c52ae",
    "transactionHash": "0x26ac2b5275450557127d3b70ca68efbc7f841f4103ae4884a56299ce8ee96a25",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > orphan tx > 1 orphan tx 1`] = `
[
  {
    "blockHash": "0xffe108aff94843e6c7dcad080343d9730f29942ff5de26e116cdd19b6e1d8e95",
    "blockNumber": "0x17daf7",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xf957c5379c879ded7a64295750520d645f3a7727",
    "gasUsed": "0x28f04",
    "logs": [
      {
        "address": "0x0000000000000000000100000000000000000001",
        "blockHash": "0xffe108aff94843e6c7dcad080343d9730f29942ff5de26e116cdd19b6e1d8e95",
        "blockNumber": "0x17daf7",
        "data": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "logIndex": "0x0",
        "topics": [
          "0x8c5be1e5ebec7d5bd14f71427d1e84f3dd0314c0f7b2291e5b200ac8c7c3b925",
          "0x000000000000000000000000f957c5379c879ded7a64295750520d645f3a7727",
          "0x000000000000000000000000ae9d7fe007b3327aa64a32824aaac52c42a6e624",
        ],
        "transactionHash": "0xc0ff345aff1925b8dede9fb90d7ade6fa01312319913e5c84ebbdd2bf42dbd78",
        "transactionIndex": "0x0",
      },
      {
        "address": "0x0000000000000000000100000000000000000001",
        "blockHash": "0xffe108aff94843e6c7dcad080343d9730f29942ff5de26e116cdd19b6e1d8e95",
        "blockNumber": "0x17daf7",
        "data": "0x0000000000000000000000000000000000000000000000000f43fc2c04ee0000",
        "logIndex": "0x1",
        "topics": [
          "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
          "0x000000000000000000000000f957c5379c879ded7a64295750520d645f3a7727",
          "0x000000000000000000000000ae9d7fe007b3327aa64a32824aaac52c42a6e624",
        ],
        "transactionHash": "0xc0ff345aff1925b8dede9fb90d7ade6fa01312319913e5c84ebbdd2bf42dbd78",
        "transactionIndex": "0x0",
      },
      {
        "address": "0xa321448d90d4e5b0a732867c18ea198e75cac48e",
        "blockHash": "0xffe108aff94843e6c7dcad080343d9730f29942ff5de26e116cdd19b6e1d8e95",
        "blockNumber": "0x17daf7",
        "data": "0x000000000000000000000000000000000000000000000000000000000000003a000000000000000000000000000000000000000000000000000000007b030100000000000000000000000000000000000000000000000000000000000000008000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000085010000000000000000000000000000000000000000000000000000640b5eece0000000000000000000000000000000000000000000000100000000000000000001000c0000000000000000000000005b828c28c334ecb918a8b5405d630349940f347b000b0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "logIndex": "0x2",
        "topics": [
          "0x6eb224fb001ed210e379b335e35efe88672a8ce935d981a6896b27ffdf52a3b2",
          "0x000000000000000000000000ae9d7fe007b3327aa64a32824aaac52c42a6e624",
        ],
        "transactionHash": "0xc0ff345aff1925b8dede9fb90d7ade6fa01312319913e5c84ebbdd2bf42dbd78",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0xae9d7fe007b3327aa64a32824aaac52c42a6e624",
    "transactionHash": "0xc0ff345aff1925b8dede9fb90d7ade6fa01312319913e5c84ebbdd2bf42dbd78",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > orphan tx > 1 successful orphan + 1 failed orphan 1`] = `
[
  {
    "blockHash": "0xf9655bfef23bf7dad14a037aa39758daccfd8dc99a7ce69525f81548068a5946",
    "blockNumber": "0x17bb6f",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xf957c5379c879ded7a64295750520d645f3a7727",
    "gasUsed": "0xb495",
    "logs": [
      {
        "address": "0x0000000000000000000100000000000000000001",
        "blockHash": "0xf9655bfef23bf7dad14a037aa39758daccfd8dc99a7ce69525f81548068a5946",
        "blockNumber": "0x17bb6f",
        "data": "0x0000000000000000000000000000000000000000000000000f43fc2c04ee0000",
        "logIndex": "0x0",
        "topics": [
          "0x8c5be1e5ebec7d5bd14f71427d1e84f3dd0314c0f7b2291e5b200ac8c7c3b925",
          "0x000000000000000000000000f957c5379c879ded7a64295750520d645f3a7727",
          "0x000000000000000000000000ae9d7fe007b3327aa64a32824aaac52c42a6e624",
        ],
        "transactionHash": "0xbb6644b3053d5213f544dc54efb4de0e81b6a88e863aa0cc22d14928b3601725",
        "transactionIndex": "0x0",
      },
    ],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x0000000000000000000100000000000000000001",
    "transactionHash": "0xbb6644b3053d5213f544dc54efb4de0e81b6a88e863aa0cc22d14928b3601725",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
  {
    "blockHash": "0xf9655bfef23bf7dad14a037aa39758daccfd8dc99a7ce69525f81548068a5946",
    "blockNumber": "0x17bb6f",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x0",
    "from": "0xf957c5379c879ded7a64295750520d645f3a7727",
    "gasUsed": "0x237fd",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x0",
    "to": "0xae9d7fe007b3327aa64a32824aaac52c42a6e624",
    "transactionHash": "0x240a9ec2efdacae2a89486980874b23987b9801fd1ca7a424506629b71a53fa6",
    "transactionIndex": "0x1",
    "type": "0x0",
  },
]
`;

exports[`getAllReceiptsAtBlock > transfer kar > basic one 1`] = `
[
  {
    "blockHash": "0x17c137e5bc15c1d300cbd4802b4bed8511f0dd6e27e3f2d4acf91f72c771984d",
    "blockNumber": "0x370da5",
    "contractAddress": null,
    "cumulativeGasUsed": "0x0",
    "effectiveGasPrice": "0x1b9b6fd45d",
    "from": "0x90f79bf6eb2c4f870365e785982e1f101e93b906",
    "gasUsed": "0x5208",
    "logs": [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x2d990115867b77eabbb7eee4f654ecdb1f26816f",
    "transactionHash": "0x6e4e92aab0aaf6cac740cdd72a412d41e03df6858f25ff0094c00349c73655e8",
    "transactionIndex": "0x0",
    "type": "0x0",
  },
]
`;
